--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <input type="checkbox" id="isAlreadyRead">
                         <label for="isAlreadyRead">Sudah Dibaca</label>
                     </div>
+                    <!-- HULK -->
                 </form>
                 <hr>
                 <button type="submit" id="submitAddBookButton">Tambah</button>
